Remove the controller - MBean registration will always happen in init()/destroy() after Lifecycle refactoring Fix a handful of Eclipse/FindBugs warnings
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@940089 13f79535-47bb-0310-9956-ffa450edef68